--- a/Urban_cart_ecommerce/src/main/resources/static/css/style.css
+++ b/Urban_cart_ecommerce/src/main/resources/static/css/style.css
@@ -7,12 +7,40 @@
 	box-shadow: 0 0 8px 0 rgba(0,0,0,0.3);
 	
 	
+}
+
+
+
+.card-gh{
+	
+	 box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 	
 	
 	
+	  padding: 0 !important;
+	  
+	  
+	  
+	   margin: 3rem !important;
 	
+	
+	
+	 margin-top: 0 !important;
+	 
+	 
+	  background-color: #17a2b8 !important;
+	  
+	  
+	  
+	  
+	    border-radius: 0.25rem !important;
+	    
+	    
+	    
+	  
 	
 }
+
 
 
 
