--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/category.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/category.html
@@ -39,7 +39,7 @@
 
 											<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
 											<!-- In case of bean the first later is small -->
-												<th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+											<th:block th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
 										</th:block>
 
 									</div>
@@ -66,17 +66,18 @@
 
 												<label> Status</label>
 												<div class="form-check">
-													<input class="form-check-input" type="radio" checked
-														value="true" name="isActive" id="flexRadioDefault1">
-													<label class="form-check-label" for="flexRadioDefault1">
-														Active </label>
+													<input class="form-check-input" type="radio"
+														name="isActive" id="exampleRadios1" value="true"
+														checked> <label class="form-check-label"
+														for="exampleRadios1">Active </label>
 												</div>
 												<div class="form-check">
-													<input class="form-check-input" type="radio" value="false"
-														name="isActive" id="flexRadioDefault2"> <label
-														class="form-check-label" for="flexRadioDefault2">
-														InActive </label>
+													<input class="form-check-input" type="radio"
+														name="isActive" id="exampleRadios2" value="false">
+													<label class="form-check-label" for="exampleRadios2">
+														Inactive</label>
 												</div>
+
 											</div>
 
 
@@ -192,16 +193,19 @@
 												<tr>
 													<th scope="col">Sl.No</th>
 													<th scope="col">Category</th>
-													<th scope="col">Image</th>
+													<th scope="col">status</th>
+													<th scope="col">Product</th>
 													<th scope="col">Action</th>
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
-													<th scope="row">1</th>
-													<td>Mark</td>
-													<td>Otto</td>
-													<td>@mdo</td>
+												<tr >
+												<td>checked</td>
+												<td>checked</td>
+												<td>checked</td>
+												<td>checked</td>
+													
+														<td>checked</td>
 												</tr>
 
 											</tbody>
