--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/index.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/index.html
@@ -94,7 +94,7 @@
 							<div class="col-md-4">
 
 
-								<a href="#" class="text-decoration-none">
+								<a href="/admin/products" class="text-decoration-none">
 
 									<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
