--- a/Urban_cart_ecommerce/src/main/resources/templates/base.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/base.html
@@ -38,7 +38,7 @@
 						aria-current="page" href="#"><i
 							class="fa-solid fa-house-user text-danger"></i>Home</a></li>
 					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="/product"><i
+						aria-current="page" href="/products"><i
 							class="fa-brands fa-product-hunt text-primary"></i>Product</a></li>
 
 
@@ -64,13 +64,13 @@
 
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="/login"><i
+						aria-current="page" href="/signin"><i
 							class="fa-solid fa-right-to-bracket text-danger"></i>Login</a></li>
 					<li class="nav-item"><a class="nav-link active text-black"
 						aria-current="page" href="/register"><i
 							class="fa-solid fa-address-card text-danger"></i>Register</a></li>
 					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="#"><i
+						aria-current="page" href="/admin"><i
 							class="fa-solid fa-user-tie text text-primary"></i>Admin</a></li>
 
 
@@ -97,10 +97,6 @@
 
 
 
-				<!-- <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>-->
 			</div>
 		</div>
 	</nav>
@@ -115,7 +111,7 @@
 	
 	<!-- Start Footer -->
 	
-	<div class="container-fluid p-3 bg-info text-center text-dark mb-3">
+	<div class="container-fluid p-3 bg-info text-center text-dark mb-3" style="margin-top: 200px">
 	
 	<p>Ecommerce.com</p>
 	</div>
