--- a/Urban_cart_ecommerce/src/main/resources/templates/register.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/register.html
@@ -111,6 +111,24 @@
 
 
 													<p class="fs-4 text-center">Register</p>
+													<th:block th:if="${session.succMsg}">
+
+														<p class="text-success text-striped fw-bold">[[${session.succMsg}]]</p>
+														<th:block
+															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+													</th:block>
+
+													<th:block th:if="${session.errorMsg}">
+
+														<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+														<!-- In case of bean the first later is small -->
+														<th:block
+															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+													</th:block>
+
+
+
+
 
 
 
@@ -121,38 +139,20 @@
 
 												<div class="card-body bg-warning">
 
-													<form>
-
+													<form action="/saveUser" enctype="multipart/form-data"
+														method="post">
 
 														<div class="row">
 
 															<div class="col">
-
-
 																<label class="form-label">Full Name</label> <input
-																	class="form-control" name="name" type="text">
-
-
-
-
-
-
-
+																	required class="form-control" name="name" type="text">
 															</div>
 
-
 															<div class="col">
-
-
-																<label class="form-label">Last Name</label> <input
-																	class="form-control" name="lname" type="text">
-
-
-
-
-
-
-
+																<label class="form-label">Contact Number</label> <input
+																	required class="form-control" name="mobileNumber"
+																	type="number">
 															</div>
 
 														</div>
@@ -163,32 +163,14 @@
 														<div class="mb-3">
 
 
-															<label class="form-label">Email</label> <input
+															<label class="form-label">Email</label> <input required
 																class="form-control" name="email" type="email">
 
 
 
 
-
-
-
 														</div>
 
-
-
-														<div class="mb-3">
-
-
-															<label class="form-label">Contact Number</label> <input
-																class="form-control" name="mobile" type="number">
-
-
-
-
-
-
-
-														</div>
 
 
 
@@ -199,65 +181,30 @@
 														<div class="row">
 
 															<div class="col">
-
-
-																<label class="form-label">address</label> <input
-																	class="form-control" name="address" type="text">
-
-
-
-
-
-
-
+																<label class="form-label">Address</label> <input
+																	required class="form-control" name="address"
+																	type="text">
 															</div>
 
-
 															<div class="col">
-
-
-																<label class="form-label">city</label> <input
+																<label class="form-label">City</label> <input required
 																	class="form-control" name="city" type="text">
-
-
-
-
-
-
-
 															</div>
+
 
 														</div>
 
 														<div class="row">
 
 															<div class="col">
-
-
-																<label class="form-label">State</label> <input
+																<label class="form-label">State</label> <input required
 																	class="form-control" name="state" type="text">
-
-
-
-
-
-
-
 															</div>
 
-
 															<div class="col">
-
-
-																<label class="form-label">Pin code</label> <input
-																	class="form-control" name="pin" type="number">
-
-
-
-
-
-
-
+																<label class="form-label">Pincode</label> <input
+																	required class="form-control" name="pincode"
+																	type="number">
 															</div>
 
 														</div>
@@ -267,51 +214,22 @@
 														<div class="row">
 
 															<div class="col">
-
-
 																<label class="form-label">Password</label> <input
-																	class="form-control" name="password" type="password">
-
-
-
-
-
-
-
+																	required class="form-control" name="password"
+																	type="password">
 															</div>
-
 
 															<div class="col">
-
-
-																<label class="form-label">Confirm password</label> <input
-																	class="form-control" name="cpassword" type="password">
-
-
-
-
-
-
-
+																<label class="form-label">Confirm Password</label> <input
+																	required class="form-control" name="cpassword"
+																	type="password">
 															</div>
-
 														</div>
-
 
 														<div class="mb-3">
-
-
-															<label class="form-label">Product Image</label> <input
-																class="form-control" name="product_image" type="file">
-
-
-
-
-
-
-
+															<label class="form-label">Profile Image</label> <input
+																class="form-control" name="img" type="file">
 														</div>
-
 
 
 
