--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/category.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/category.html
@@ -27,7 +27,7 @@
 								<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
 									<div class="card-header text-center fs-4 bg-primary">
-										Add Category
+											<p class="text-center fs-4">Add Category</p>
 
 										<th:block th:if="${session.succMsg}">
 
@@ -67,9 +67,9 @@
 												<label> Status</label>
 												<div class="form-check">
 													<input class="form-check-input" type="radio"
-														name="isActive" id="exampleRadios1" value="true"
-														checked> <label class="form-check-label"
-														for="exampleRadios1">Active </label>
+														name="isActive" id="exampleRadios1" value="true" checked>
+													<label class="form-check-label" for="exampleRadios1">Active
+													</label>
 												</div>
 												<div class="form-check">
 													<input class="form-check-input" type="radio"
@@ -79,15 +79,6 @@
 												</div>
 
 											</div>
-
-
-
-
-
-
-
-
-
 											<div class="mb-3 col">
 
 
@@ -186,9 +177,9 @@
 
 										View Category</div>
 
-									<div class="card-body bg-info">
+									<div class="card-body bg-info text-center">
 
-										<table class="table table-info table-striped">
+										<table class="table table-info table-striped table-bordered border-primary">
 											<thead>
 												<tr>
 													<th scope="col">Sl.No</th>
@@ -199,13 +190,19 @@
 												</tr>
 											</thead>
 											<tbody>
-												<tr >
-												<td>checked</td>
-												<td>checked</td>
-												<td>checked</td>
-												<td>checked</td>
-													
-														<td>checked</td>
+												<tr th:each="cat,c:${categorys}">
+													<th scope="row">[[${c.count}]]</th>
+													<td>[[${cat.name}]]</td>
+													<td>[[${cat.isActive}]]</td>
+													<td><img
+														th:src="@{'/img/Category_image/'+${cat.imageName}}"
+														width="50px" height="50px"></td>
+
+													<td><a th:href="@{'/admin/loadEditCategory/'+${cat.id}}"    class="btn btn-primary btn-sm"><i
+															class="fa-solid fa-pen-to-square  fa-1x"></i> Edit </a> <a
+														th:href="@{'/admin/deleteCategory/'+${cat.id}}"
+														class="btn btn-danger btn-sm"><i
+															class="fa-solid fa-trash  fa-1x"></i>Delete</a></td>
 												</tr>
 
 											</tbody>
