--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/index.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/index.html
@@ -127,7 +127,7 @@
 							<div class="col-md-4">
 
 
-								<a href="#" class="text-decoration-none">
+								<a href="/admin/orders" class="text-decoration-none">
 
 									<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
@@ -159,7 +159,7 @@
 							<div class="col-md-4">
 
 
-								<a href="#" class="text-decoration-none">
+								<a href="/admin/users?type=1" class="text-decoration-none">
 
 									<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
@@ -191,12 +191,12 @@
 							<div class="col-md-4">
 
 
-								<a href="#" class="text-decoration-none">
+								<a href="/admin/add-admin" class="text-decoration-none">
 
 									<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
 
 										<div class="card-body text-center">
-											<i class="fa-solid fa-user-shield fa-2x text-primary"></i>
+											<i class="fa-solid fa-user-plus fa-2x text-primary"></i>
 											<p class="fs-5 fw-bold">Add Admin</p>
 
 
@@ -217,6 +217,35 @@
 
 							</div>
 
+
+							<div class="col-md-4">
+
+
+								<a href="/admin/users?type=2" class="text-decoration-none">
+
+									<div class="card bg-info shadow-lg  p-0 m-5 mt-0">
+
+										<div class="card-body text-center">
+											<i class="fa-solid fa-user-shield fa-2x text-primary"></i>
+											<p class="fs-5 fw-bold"> Admin</p>
+
+
+
+
+
+										</div>
+
+
+
+
+
+									</div>
+
+
+								</a>
+
+
+							</div>
 
 
 
