--- a/Urban_cart_ecommerce/src/main/resources/templates/register.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/register.html
@@ -140,7 +140,7 @@
 												<div class="card-body bg-warning">
 
 													<form action="/saveUser" enctype="multipart/form-data"
-														method="post">
+														id="userRegister" novalidate   method="post">
 
 														<div class="row">
 
@@ -264,7 +264,7 @@
 
 
 												<div class="card-footer text-center bg-info">
-													have an account <a href="/login">Login</a>
+													have an account <a href="/signin">Login</a>
 
 
 
