--- a/Urban_cart_ecommerce/src/main/resources/static/css/style.css
+++ b/Urban_cart_ecommerce/src/main/resources/static/css/style.css
@@ -10,6 +10,14 @@
 	box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
+
+
+.error {
+	color: red;
+}
+
+
+
 .card-gh{
 	
 	 box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
@@ -43,7 +51,9 @@
 
 
 
-
+.error {
+	color: red;
+}
 
 
 
