--- a/Urban_cart_ecommerce/src/main/resources/templates/base.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/base.html
@@ -9,14 +9,13 @@
 	rel="stylesheet"
 	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 	crossorigin="anonymous">
+
 <link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-	integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+	integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
-	
-	
-	
-	<link rel="stylesheet"  href="static/css/style.css">
+
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -24,8 +23,8 @@
 
 	<nav class="navbar navbar-expand-lg  bg-info fixed-top text-black">
 		<div class="container-fluid">
-			<a class="navbar-brand text-black" href="#"><i
-				class="fa-solid fa-dumpster-fire text-success"></i>URBAN CART</a>
+			<a class="navbar-brand" href="#"><i
+				class="fa-solid fa-cart-shopping text-success"></i> Ecom Store</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -34,28 +33,48 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="#"><i
-							class="fa-solid fa-house-user text-danger"></i>Home</a></li>
-					<li class="nav-item"><a class="nav-link active text-black"
+				
+				
+				
+				
+				
+				<th:block th:if="${user==null}">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/"><i class="fa-solid fa-house"></i>
+								Home</a></li>
+					</th:block>
+
+					<th:block th:unless="${user==null}">
+						<li class="nav-item" th:if="${user.role=='ROLE_ADMIN'}"><a
+							class="nav-link active" aria-current="page" href="/admin/"><i
+								class="fa-solid fa-house"></i> Home</a></li>
+
+						<li class="nav-item" th:if="${user.role=='ROLE_USER'}"><a
+							class="nav-link active" aria-current="page" href="/"><i
+								class="fa-solid fa-house"></i> Home</a></li>
+					</th:block>
+
+							
+							
+							
+							
+							
+							
+							
+							
+					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="/products"><i
 							class="fa-brands fa-product-hunt text-primary"></i>Product</a></li>
 
-
 					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle text-black" href="#"
-						id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-						aria-expanded="false"> <i
-							class="fa-solid fa-layer-group text-primary"></i> Category
-					</a>
-						<ul class="dropdown-menu bg-info shadow-lg" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Something else
-									here</a></li>
-						</ul></li>
+						class="nav-link dropdown-toggle" href="#" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false"><i
+							class="fa-solid fa-layer-group text-primary"></i> Category </a>
+						<ul class="dropdown-menu bg-info shadow-lg">
+							<li th:each="c:${categorys}"><a class="dropdown-item"
+								th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
 
+						</ul></li>
 
 				</ul>
 
@@ -63,16 +82,51 @@
 
 
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="/signin"><i
-							class="fa-solid fa-right-to-bracket text-danger"></i>Login</a></li>
-					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="/register"><i
-							class="fa-solid fa-address-card text-danger"></i>Register</a></li>
-					<li class="nav-item"><a class="nav-link active text-black"
-						aria-current="page" href="/admin"><i
-							class="fa-solid fa-user-tie text text-primary"></i>Admin</a></li>
 
+					<th:block th:if="${user==null}">
+						<li class="nav-item"><a class="nav-link active text-black"
+							aria-current="page" href="/signin"><i
+								class="fa-solid fa-right-to-bracket text-danger"></i>Login</a></li>
+						<li class="nav-item"><a class="nav-link active text-black"
+							aria-current="page" href="/register"><i
+								class="fa-solid fa-address-card text-danger"></i>Register</a></li>
+
+
+					</th:block>
+
+
+
+
+					<th:block th:if="${user!=null}">
+						<th:block th:if="${user.role=='ROLE_USER'}">
+							<li class="nav-item"><a class="nav-link active"
+								aria-current="page" href="/user/cart"><i
+									class="fa-solid fa-cart-shopping"></i> Cart [ [[${countCart}]]
+									]</a></li>
+						</th:block>
+
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle active" href="#" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false"> <i
+								class="fa-solid fa-user"></i> [[${user.name}]]
+						</a>
+							<ul class="dropdown-menu">
+								<li th:if="${user.role=='ROLE_USER'}"><a
+									class="dropdown-item" href="/user/profile">Profile</a></li>
+
+								<li th:if="${user.role=='ROLE_ADMIN'}"><a
+									class="dropdown-item" href="/admin/profile">Profile</a></li>
+
+								<li th:if="${user.role=='ROLE_USER'}"><a
+									class="dropdown-item" href="/user/user-orders">My Orders</a></li>
+								<li><a class="dropdown-item" href="/logout">Logout</a></li>
+								<li><hr class="dropdown-divider"></li>
+
+							</ul></li>
+
+
+
+					</th:block>
 
 				</ul>
 
@@ -106,35 +160,43 @@
 
 	<!-- End Navbar -->
 	<div th:replace="${content}"></div>
-	
-	
-	
+
+
+
 	<!-- Start Footer -->
-	
-	<div class="container-fluid p-3 bg-info text-center text-dark mb-3" style="margin-top: 200px">
-	
-	<p>Ecommerce.com</p>
+
+	<div class="container-fluid p-3 bg-info text-center text-dark mb-3"
+		style="margin-top: 200px">
+
+		<p>Ecommerce.com</p>
 	</div>
-	
-	
-	
-	
-	
+
+
+
+
+
 	<!-- End Footer -->
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
+
+
+<!-- Jquery Validation Library  -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="../js/script.js"></script>
+	<!-- End  -->
+
+
+
+
+
+
+
+
+
+
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
