--- a/Urban_cart_ecommerce/src/main/resources/templates/index.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/index.html
@@ -1,337 +1,155 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http//:www.thymeLeaf.org"
-th:replace="~{base::Layout(~{::section})}">
+	th:replace="~{base::Layout(~{::section})}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Home Page</title>
 </head>
 <body>
 
-<section>
-<!-- Start slide -->
+	<section>
+		<!-- Start slide -->
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="img/2593065.jpg" class="d-block w-100" alt="image1" height="650px">
-    </div>
-    <div class="carousel-item">
-      <img src="img/best-ecommerce-website-templates.jpg" class="d-block w-100" alt="image2" height="650px">
-    </div>
-    <div class="carousel-item">
-      <img src="img/Ecommerce-Shopping-Infographics.png" class="d-block w-100" alt="image3" height="650px">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-<!-- End Slide -->
+		<div id="carouselExampleControls" class="carousel slide"
+			data-bs-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="img/2593065.jpg" class="d-block w-100" alt="image1"
+						height="650px">
+				</div>
+				<div class="carousel-item">
+					<img src="img/best-ecommerce-website-templates.jpg"
+						class="d-block w-100" alt="image2" height="650px">
+				</div>
+				<div class="carousel-item">
+					<img src="img/Ecommerce-Shopping-Infographics.png"
+						class="d-block w-100" alt="image3" height="650px">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button"
+				data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button"
+				data-bs-target="#carouselExampleControls" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+		<!-- End Slide -->
 
 
 
-<!-- Start Category Module -->
+		<!-- Start Category Module -->
 
-<div class="container">
-<div class="row">
+		<div class="container">
+			<div class="row">
 
-<p class="text-center fs-4">Category</p>
+				<p class="text-center fs-4">Category</p>
 
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
+				<div class="col-md-2" th:each="c:${category}">
+					<div
+						class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
+						<div class="card-body text-center">
 
 
-  <img src="img/th (1).jfif" width="65%" alt="image2" height="140px">
-<p>Car</p>
-</div>
+							<img th:src="@{'img/Category_image/'+${c.imageName}}" width="65%"
+								height="140px"><br> <a
+								th:href="@{'/products?category='+${c.name}}"
+								class="text-decoration-none text-dark">[[${c.name}]]</a>
+						</div>
 
 
 
 
-</div>
+					</div>
 
 
 
 
-</div>
+				</div>
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
+			</div>
 
 
-  <img src="img/th (3).jfif" width="65%" alt="image2" height="140px">
-		<p>bike</p>
-</div>
 
 
 
 
-</div>
+		</div>
 
 
 
 
-</div>
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
 
 
-  <img src="img/th (8).jfif" width="65%" alt="image2" height="140px">
-<p>Saree</p>
-</div>
 
 
 
 
-</div>
+		<!-- End Category Module -->
 
 
+		<!-- Start Latest product -->
 
+		<div class="container">
+			<div class="row">
 
-</div>
+				<p class="text-center fs-4">Latest Product</p>
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
 
+				<div class="col-md-2" th:each="p:${products}">
+					<div
+						class="card    shadow-lg p-3 mb-5 bg-primary rounded">
+						<div class="card-body text-center">
 
-  <img src="img/th (10).jfif" width="65%" alt="image2" height="140px">
-<p>shirt</p>
-</div>
 
+							<img alt="" th:src="@{'img/product_img/'+${p.image}}" class=""
+								width="65%" height="140px">
+							<p class="text-center">
+								<a th:href="@{'/product/'+${p.id}}" class="text-decoration-none text-dark">[[${p.title}]]</a>
+							</p>
+						</div>
 
 
 
-</div>
 
+					</div>
 
 
 
-</div>
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
+				</div>
 
 
-  <img src="img/th (14).jfif" width="65%" alt="image2" height="140px">
-<p>Watch</p>
-</div>
+			</div>
 
 
 
 
-</div>
 
 
+		</div>
 
 
-</div>
 
 
 
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
 
 
-  <img src="img/th (16).jfif" width="65%" alt="image2" height="140px">
-<p>Laptop</p>
-</div>
 
 
+		<!-- End Latest product -->
 
 
-</div>
 
 
 
 
-</div>
-
-
-</div>
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-<!-- End Category Module -->
-
-
-<!-- Start Latest product -->
-
-<div class="container">
-<div class="row">
-
-<p class="text-center fs-4">Latest Product</p>
-
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (9).jfif" width="65%" alt="image2" height="140px">
-<p>Car</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (15).jfif" width="65%" alt="image2" height="140px">
-		<p>bike</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (7).jfif" width="65%" alt="image2" height="140px">
-<p>Saree</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (4).jfif" width="65%" alt="image2" height="140px">
-<p>shirt</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (2).jfif" width="65%" alt="image2" height="140px">
-<p>Watch</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-
-
-<div class="col-md-2">
-<div class="card  rounded-circle  shadow-lg p-3 mb-5 bg-info rounded">
-<div class="card-body text-center">
-
-
-  <img src="img/th (13).jfif" width="65%" alt="image2" height="140px">
-<p>Laptop</p>
-</div>
-
-
-
-
-</div>
-
-
-
-
-</div>
-
-
-</div>
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-<!-- End Latest product -->
-
-
-
-
-
-
-</section>
+	</section>
 
 </body>
 </html>
