--- a/Urban_cart_ecommerce/src/main/resources/templates/login.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/login.html
@@ -189,7 +189,7 @@
 
 
 												<div class="card-footer text-center bg-info">
-													<a href="#"> Forget password</a><br> Don't have an
+													<a href="/forgot-password"> Forget password</a><br> Don't have an
 													account?? <a href="/register">Create One</a>
 
 
