--- a/Urban_cart_ecommerce/src/main/resources/templates/product.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/product.html
@@ -13,31 +13,14 @@
 
 				<div class="col-md-8 offset-md-2">
 
-					<form>
-
+					<form action="/products" method="get">
 						<div class="input-group">
-
 							<input type="text" class="form-control" name="ch">
-
-							<button class="btn btn-info text-dark ms-3 col-md-2">
-								<i class="fa-solid fa-magnifying-glass text-primary"></i>Search
+							<button class="btn btn-light text-dark ms-3 col-md-2">
+								<i class="fa-solid fa-magnifying-glass"></i> Search
 							</button>
-
-
-
-
-
 						</div>
-
-
-
-
-
-
-
-
 					</form>
-
 
 
 
@@ -94,10 +77,10 @@
 						</div>
 					</div>
 				</div>
-				
-				
-				
-				
+
+
+
+
 				<div class="col-md-10">
 
 
@@ -106,49 +89,50 @@
 
 							<p class="fs-3 text-center">Products</p>
 							<div class="row">
-<th:block th:if="${products.size >0}">
-								<div class="col-md-3" th:each="p:${products}">
-									<div class="card mt-4">
+								<th:block th:if="${productsSize >0}">
+									<div class="col-md-3" th:each="p:${products}">
+										<div class="card mt-4">
 
-										<div
-											class="card-body text-center shadow-lg bg-info decoration-none "
-											width="100%" height="150px">
-
-											<img alt="" th:src="@{'/img/product_img/'+${p.image}}"
+											<div
+												class="card-body text-center shadow-lg bg-info decoration-none "
 												width="100%" height="150px">
 
-											<p class="fs-5 text-center">[[${p.title}]]</p>
+												<img alt="" th:src="@{'/img/product_img/'+${p.image}}"
+													width="100%" height="150px">
+
+												<p class="fs-5 text-center">[[${p.title}]]</p>
 
 
-											<div class="row text-center">
+												<div class="row text-center">
 
-												<p class="fs-6 fw-bold">
-													<span>&#8377; [[${p.discountPrice}]]</span> <br> <span
-														class="text-decoration-line-through text-secondary">&#8377;
-														[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
-														off </span>
-												</p>
+													<p class="fs-6 fw-bold">
+														<span>&#8377; [[${p.discountPrice}]]</span> <br> <span
+															class="text-decoration-line-through text-secondary">&#8377;
+															[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
+															off </span>
+													</p>
 
-												<a th:href="@{'/product/'+${p.id}}"
-													class="btn btn-primary col-md-6 offset-md-3">View
-													Details</a>
+													<a th:href="@{'/product/'+${p.id}}"
+														class="btn btn-primary col-md-6 offset-md-3">View
+														Details</a>
+
+												</div>
 
 											</div>
+
 
 										</div>
 
 
+
+
+
 									</div>
 
-
-
-
-
-								</div>
-
-</th:block>
-								<th:block th:unless="${products.size>0}">
-								<p class="fs-4 text-center mt-4 text-danger">Product not available</p>
+								</th:block>
+								<th:block th:unless="${productsSize>0}">
+									<p class="fs-4 text-center mt-4 text-danger">Product not
+										available</p>
 								</th:block>
 
 
@@ -173,9 +157,55 @@
 
 
 
+					<!-- Start Pagination -->
+
+
+					<div class="row">
+						<div class="col-md-4">Total Products : [[${totalElements}]]</div>
+						<div class="col-md-6">
+							<th:block th:if="${productsSize>0}">
+								<nav aria-label="Page navigation example">
+									<ul class="pagination">
+										<li class="page-item"
+											th:classappend="${isFirst} ? 'disabled':''"><a
+											class="page-link"
+											th:href="@{'/products?pageNo='+${pageNo-1}}"
+											aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
+										</a></li>
+
+										<li th:each="i:${#numbers.sequence(1,totalPages)}"
+											class="page-item" th:classappend="${pageNo+1==i}?'active':''"
+											]]><a class="page-link"
+											th:href="@{'/products?pageNo='+${i-1}}">[[${i}]]</a></li>
+
+										<li class="page-item"
+											th:classappend="${isLast} ? 'disabled':''"><a
+											class="page-link"
+											th:href="@{'/products?pageNo='+${pageNo+1}}"
+											aria-label="Next"> <span aria-hidden="true">&raquo;</span>
+										</a></li>
+									</ul>
+								</nav>
+						</div>
+						</th:block>
+					</div>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+					<!-- End pagination -->
 
 				</div>
 
