--- a/Urban_cart_ecommerce/src/main/resources/templates/register.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
 
 
 
-		<div class=" container" style="margin-top: 70px">
+		<div class=" container-fluid" style="margin-top: 70px">
 			<div class="container-fluid mt-1 display-flex decoration-none">
 
 
@@ -37,22 +37,22 @@
 
 
 											<!-- Start carsoule -->
-											<div class="conatiner" width="100%" height="600px">
+											<div class="conatiner" width="100%" height="638px">
 
 												<div id="carouselExampleControls" class="carousel slide"
 													data-bs-ride="carousel">
 													<div class="carousel-inner">
 														<div class="carousel-item active">
 															<img src="img/2593065.jpg" class="d-block w-100"
-																alt="image1" height="650px">
+																alt="image1" height="638px">
 														</div>
 														<div class="carousel-item">
 															<img src="img/ecommerce.webp" class="d-block w-100"
-																alt="image2" height="650px">
+																alt="image2" height="638px">
 														</div>
 														<div class="carousel-item">
 															<img src="img/iStock-1051616786.webp"
-																class="d-block w-100" alt="image3" height="650px">
+																class="d-block w-100" alt="image3" height="638px">
 														</div>
 													</div>
 													<button class="carousel-control-prev" type="button"
