--- a/Urban_cart_ecommerce/src/main/resources/templates/user/cart.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/user/cart.html
@@ -69,7 +69,7 @@
 											<td class="text-center"><a
 												th:href="@{'/user/cartQuantityUpdate?sy=de&cid='+${cart.id}}">
 													<i class="fa-solid fa-minus text-danger"></i>
-											</a> [ [[${cart.quantity}]] ] <a
+											</a>  [[${cart.quantity}]]  <a
 												th:href="@{'/user/cartQuantityUpdate?sy=in&cid='+${cart.id}}">
 													<i class="fa-solid fa-plus text-success"></i>
 											</a></td>
