--- a/Urban_cart_ecommerce/src/main/resources/templates/admin/orders.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/admin/orders.html
@@ -150,8 +150,8 @@
 													<td>[[${o.orderDate}]]</td>
 													<td>[[${o.product.title}]]</td>
 													<td>Quantity : [[${o.quantity}]] <br>Price :
-														[[${o.price}]] <br>Total Price :[[${o.quantity *
-														o.price}]]
+														[[${o.price}]] <br>Total Price :[[${
+														o.totalPrice}]]
 													</td>
 													<td>[[${o.status}]]</td>
 													<td>
