--- a/Urban_cart_ecommerce/src/main/resources/templates/base.html
+++ b/Urban_cart_ecommerce/src/main/resources/templates/base.html
@@ -24,7 +24,7 @@
 	<nav class="navbar navbar-expand-lg  bg-info fixed-top text-black">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"><i
-				class="fa-solid fa-cart-shopping text-success"></i> Ecom Store</a>
+				class="fa-solid fa-cart-shopping text-success"></i>UrbanKart</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 				aria-controls="navbarSupportedContent" aria-expanded="false"
