--- a/BookMyRide/src/main/resources/templates/index.html
+++ b/BookMyRide/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link  display-6" href="/register">Sign up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link  display-6" href="/login">Sign in</a>
+                    <a class="nav-link  display-6" href="/signin">Sign in</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link  display-6" href="#cta">Ratings</a>
