--- a/BookMyRide/src/main/resources/templates/register.html
+++ b/BookMyRide/src/main/resources/templates/register.html
@@ -2,111 +2,139 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BookMyRide</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>BookMyRide</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+	crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbars">
-        <div class="container-fluid ">
-            <a class="navbar-brand black brand" >BookMyRide</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
-                    <li class="nav-item">
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link black" href="#"></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<nav class="navbar navbar-expand-lg navbars">
+		<div class="container-fluid ">
+			<a class="navbar-brand black brand">BookMyRide</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav  mb-2 mb-lg-0 ms-auto">
+					<li class="nav-item"></li>
+					<li class="nav-item"><a class="nav-link black" href="#"></a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-    <div  class="center ">
-        <h1 class="display-6 myheader black">Sign Up</h1>
-        <form id="formmmm">
+	<div class="center ">
+		<h1 class="display-6 myheader black">Sign Up</h1>
+		<th:block th:if="${session.succMsg}">
 
-            <div class="row mb-3 ">
-                <div class="col ">
-                    <input id="ssn" type="text" class="form-control myinput a"placeholder="SSN" name="ssn"  minlength="6" maxlength="6" required></input>
-                </div>
-            </div>
+														<p class="text-success text-striped fw-bold">[[${session.succMsg}]]</p>
+														<th:block
+															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+													</th:block>
 
-            <div class="row mb-3 ">
-                <div class="col ">
-                    <input type="text" class="form-control myinput a"placeholder="First Name" name="fName"  maxlength="32" required></input>
-                </div>
-            </div>
+													<th:block th:if="${session.errorMsg}">
 
-            <div class="row mb-3 ">
-                <div class="col ">
-                    <input type="text" class="form-control myinput a" placeholder="Last Name" name="lName" maxlength="32" required></input>
-                </div>
-            </div>
+														<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+														<!-- In case of bean the first later is small -->
+														<th:block
+															th:text="${@commonServiceImple.removeSessionMsg()}"></th:block>
+													</th:block>
+		
+		<form action="/saveUser"  enctype="multipart/form-data"  method="post">
 
-            <div class="row mb-3 ">
-                <div class="col ">
-                    <input id="email" type="email" class="form-control myinput b" placeholder="E-Mail" name="email"maxlength="64" > required ></input>
-                </div>
-            </div>
 
-            <div class="row mb-3 ">
-                <div class="col ">
-                    <input id="phone" type="tel" class="form-control myinput b" placeholder="Phone Number" name="phone_no"   minlength="11" maxlength="11" required ></input>
-                </div>
-            </div>
+			<div class="row mb-3 ">
+				<div class="col">
+					<input type="text" class="form-control myinput a"
+						placeholder="First Name" name="firstName" maxlength="32" required></input>
+				</div>
+			</div>
 
-            <div class="row mb-3 ">
-                <div class="col">
-                    <input type="text" class="form-control myinput b" placeholder="Credit Card Holder's name" name="holder_name" maxlength="64" required ></input>
-                </div>
-            </div>
+			<div class="row mb-3 ">
+				<div class="col ">
+					<input type="text" class="form-control myinput a"
+						placeholder="Last Name" name="lastName" maxlength="32" required></input>
+				</div>
+			</div>
 
-            <div class="row mb-3 ">
-                <div class="col">
-                    <input type="text" pattern="[0-9]*" inputmode="numeric"  class="form-control myinput b" placeholder="Credit Card Number" name="credit_card_no"   minlength="16" maxlength="16" required ></input>
-                </div>
-            </div>
+			<div class="row mb-3 ">
+				<div class="col ">
+					<input id="email" type="email" class="form-control myinput b"
+						placeholder="E-Mail" name="email" maxlength="64" required></input>
+				</div>
+			</div>
 
-            <div class="row mb-3">
-                <div class="col">
-                    <input type="date" pattern="[0-9]*" inputmode="numeric" class="form-control myinput b" placeholder="Credit Card Expiry Date" name="credit_card_expiry_date" required ></input>
-                </div>
-            </div>
-           
-            <div class="row mb-3">
-                <div class="col">
-                    <input type="text"pattern="[0-9]*" inputmode="numeric"  class="form-control myinput b" placeholder="Credit Card CVV" name="credit_card_cvv" maxlength="3" minlength="3"  required ></input>
-                </div>
-            </div>
-            
-            <div class="row mb-3">
-                <div class="col">
-                    <input id="pass1" type="password" class="form-control myinput c" placeholder="Password" name="password" required ></input>
-                </div>
-            </div>
+			<div class="row mb-3 ">
+				<div class="col ">
+					<input id="phone" type="tel" class="form-control myinput b"
+						placeholder="Phone Number" name="phoneNumber" minlength="11"
+						maxlength="11" required></input>
+				</div>
+			</div>
 
-            <div class="row mb-3">
-                <div class="col">
-                    <input id="pass2" type="password" class="form-control myinput d" placeholder="Confirm Password" name="confirm" required ></input>
-                </div>
-            </div>
-            
-            <button id="submit-button" class="btn btn-light mybtn g black">Register</button>
+			<div class="row mb-3 ">
+				<div class="col">
+					<input type="text" class="form-control myinput b"
+						placeholder="Credit Card Holder's name" name="holderName"
+						maxlength="64" required></input>
+				</div>
+			</div>
 
-        </form>
-    </div>
-    
+			<div class="row mb-3 ">
+				<div class="col">
+					<input type="text" pattern="[0-9]*" inputmode="numeric"
+						class="form-control myinput b" placeholder="Credit Card Number"
+						name="credit_card_no" minlength="16" maxlength="16" required></input>
+				</div>
+			</div>
 
-   
+			
+
+			<div class="row mb-3">
+				<div class="col">
+					<input type="text" pattern="[0-9]*" inputmode="numeric"
+						class="form-control myinput b" placeholder="Credit Card CVV"
+						name="credit_card_cvv" maxlength="3" minlength="3" required></input>
+				</div>
+			</div>
+
+			<div class="row mb-3">
+				<div class="col">
+					<input id="pass1" type="password" class="form-control myinput c"
+						placeholder="Password" name="password" required></input>
+				</div>
+			</div>
+
+			<div class="row mb-3">
+				<div class="col">
+					<input id="pass2" type="file" class="form-control myinput d"
+						placeholder="Profile Image" name="img" required></input>
+				</div>
+			</div>
+
+			<button id="submit-button" class="btn btn-light mybtn g black">Register</button>
+
+			<div class="card-footer text-center bg-info">
+				have an account <a href="/signin">Login</a>
+			</div>
+		</form>
+
+
+
+	</div>
+
+
+
 </body>
 
 </html>
