--- a/BookMyRide/src/main/resources/templates/index.html
+++ b/BookMyRide/src/main/resources/templates/index.html
@@ -172,7 +172,7 @@
     <footer class="last-section" id="footer">
         <div class="container-fluid">
             <a class="black" href="https://www.linkedin.com/in/debashis-kar-089490259/"><i class="social-icon a fa fa-linkedin" href="https://www.linkedin.com/in/debashis-kar-089490259/"></i></a>
-            <p>© 2024 All rights reserved | Developed by Debashis Kar.</p>
+            <p>© 2024 All rights reserved | Developed by Arindol and debashis</p>
         </div>
     </footer>
     
